<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/common_padding_default">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="171dp"
            android:layout_height="147dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/app_name"
            android:textColor="#019C4A"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textSize="34sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUserNameLogin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name_login"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/counter_mas_name"
            app:endIconMode="clear_text"
            app:helperText="@string/helper_required"
            app:startIconDrawable="@drawable/person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserNameLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="@integer/counter_mas_name">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilpasswordLogin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_login"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/counter_mas_name"
            app:endIconMode="password_toggle"
            app:helperText="@string/helper_required"
            app:startIconDrawable="@drawable/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etpasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="@integer/counter_mas_name">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#00A64F"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/login"
            android:layout_marginTop="250px"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textStyle="bold"
            app:cornerRadius="35px"
        />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="UTEQ"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="#000000"
           />
        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#E8EDED"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/sign_up"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="#00A64F"
            android:textStyle="bold"
            app:cornerRadius="35px" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>