<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.SignFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/common_padding_default">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center"
            android:text="@string/create_user"
            android:textColor="#019C4A"
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="138dp"
            android:layout_height="78dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            app:srcCompat="@drawable/user" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFirstName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/counter_mas_name"
            app:endIconMode="clear_text"
            app:helperText="@string/helper_required"
            app:startIconDrawable="@drawable/person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="@integer/counter_mas_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLastName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/counter_mas_name"
            app:endIconMode="clear_text"
            app:helperText="@string/helper_required"
            app:startIconDrawable="@drawable/person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="@integer/counter_mas_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUserNameCreate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name_login"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/counter_mas_name"
            app:endIconMode="clear_text"
            app:helperText="@string/helper_required"
            app:startIconDrawable="@drawable/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserNameCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="@integer/counter_mas_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilpasswordCreate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_login"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/counter_mas_name"
            app:endIconMode="password_toggle"
            app:helperText="@string/helper_required"
            app:startIconDrawable="@drawable/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etpasswordCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="@integer/counter_mas_name">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <!-- Este es un comentario en XML
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilpasswordCreateRepeat"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_create"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/counter_mas_name"
            app:endIconMode="password_toggle"
            app:helperText="@string/helper_required"
            app:startIconDrawable="@drawable/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etpasswordCreateRepeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="@integer/counter_mas_name">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        -->
        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#E8EDED"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="#00A64F"
            android:textStyle="bold"
            app:cornerRadius="35px" />


            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                style="?android:attr/progressBarStyleLarge"
                android:visibility="gone" />


    </LinearLayout>




</androidx.core.widget.NestedScrollView>